Sat Jul 12 15:51:18 2003  Kristian Rietveld  <kris@gtk.org>

	Merged from stable.

	* gtk/gtktreeview.c (gtk_tree_view_real_collapse_row): use
	gdk_window_get_pointer instead of gdk_display_get_window_at_pointer
	to avoid a roundtrip (#110272, Owen Taylor).

Sat Jul 12 15:28:26 2003  Kristian Rietveld  <kris@gtk.org>

	Merged from stable.

	This patch really really fixes scrolling. Related bugs: #81627,
	testcase provided by Timo Sirainen, #111500, testcase provided by
	manu, #113241, reported by Pedro Gimeno/Michael Natterer.

	* gtk/gtktreeview.c (validate_visible_area): scrolling to a dy
	which is equal to the lower border of the window means scrolling
	to an invisible row, always update the dy when scrolling to an
	invisible row, corrected area_above/below calculations for
	invisible rows, when walking the tree correct the size
	subtracted for invalidated rows, fix wrong logic in comment.

2003-07-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkicontheme.c (pixbuf_supports_svg): Use g_strfreev() to free mime_types. 
	(#117219, Steve Chaplin)

Tue Jul  8 20:11:04 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (get_real_window)
	gdk/x11/gdkinput-x11.c (_gdk_input_common_init)
	gdk/x11/gdkimage-x11.c (_gdk_windowing_image_init)
	gdk/x11/gdkprivate-x11.h (_gdk_windowing_image_init)
	Don't assume that all events start with XEventAny - Xkb events
	don't! (#105745). So, only do that for core events, and for
	non-core events, add a system for registering event types
	that start with XEventAny.

	* gdk/x11/gdkevents-x11.c (gdk_event_translate):
	Check to see if the result of gdk_window_lookup_for_display()
	is actually a window.

Fri Jul 11 20:48:14 2003  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodel.c (gtk_tree_path_free): make the path != NULL
	check a silent assert, so it follows the g_free() behaviour.

2003-07-11  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkstatusbar.c (gtk_statusbar_init): Center statusbar contents 